Sutter Health/src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>A3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A3</label>
        <referenceTo>A3__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Related_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <label>Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SCAH</fullName>
                </value>
                <value>
                    <fullName>S3</fullName>
                </value>
                <value>
                    <fullName>Kahi</fullName>
                </value>
                <value>
                    <fullName>SHSS</fullName>
                </value>
                <value>
                    <fullName>SHP</fullName>
                </value>
                <value>
                    <fullName>Systemwide</fullName>
                </value>
                <value>
                    <fullName>SHSO</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SAH</fullName>
                </value>
                <value>
                    <fullName>SAFH</fullName>
                </value>
                <value>
                    <fullName>Sutter Amador Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Auburn Faith Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Davis Hospital</fullName>
                </value>
                <value>
                    <fullName>Sutter Medical Center, Sacramento</fullName>
                </value>
                <value>
                    <fullName>Sutter Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Sutter North Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Sutter Regional Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Sutter Roseville Medical Center</fullName>
                </value>
                <value>
                    <fullName>Sutter Solano Medical Center</fullName>
                </value>
                <value>
                    <fullName>Memorial Hospital Los Banos</fullName>
                </value>
                <value>
                    <fullName>Memorial Medical Center Modesto</fullName>
                </value>
                <value>
                    <fullName>Sutter Gould Medical Foundation</fullName>
                </value>
                <value>
                    <fullName>Sutter Tracy Community Hospital</fullName>
                </value>
                <value>
                    <fullName>Menlo Park Surgical Hospital</fullName>
                </value>
                <value>
                    <fullName>Mills-Peninsula Health Services</fullName>
                </value>
                <value>
                    <fullName>Palo Alto Medical Foundation - PCR</fullName>
                </value>
                <value>
                    <fullName>Sutter Maternity and Surgery Center of Santa Cruz</fullName>
                </value>
                <value>
                    <fullName>Palo Alto Medical Foundation - SC</fullName>
                </value>
                <value>
                    <fullName>Alta Bates Summit Medical Center</fullName>
                </value>
                <value>
                    <fullName>Eden Medical Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aging__c</fullName>
        <formula>Days_to_Concept_Elaboration__c + Days_to_EA_Review__c + Days_to_PRF_Received__c + Days_to_Triage__c + Days_to_Discovery_Funding__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aging</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <inlineHelpText>From SBAR Analysis, what is the Project Assessment?</inlineHelpText>
        <label>Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Background__c</fullName>
        <inlineHelpText>From SBAR Analysis, what is the Project Background?</inlineHelpText>
        <label>Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Status__c</fullName>
        <label>Budget Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Track</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Rating</fullName>
                </value>
                <value>
                    <fullName>None: Not clearly tied to mission - limited community need</fullName>
                </value>
                <value>
                    <fullName>Low: Limited tie to mission - other community options exist</fullName>
                </value>
                <value>
                    <fullName>Moderate: Clear tie with mission - limited community options</fullName>
                </value>
                <value>
                    <fullName>Strong: Strongly supports mission - community need documented</fullName>
                </value>
                <value>
                    <fullName>Extreme: Critical to mission: substantial community need documented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Concept_Elaboration__c</fullName>
        <inlineHelpText>Date</inlineHelpText>
        <label>Concept Elaboration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_to_Concept_Elaboration__c</fullName>
        <formula>Concept_Elaboration__c - EA_Review__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Concept Elaboration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Discovery_Funding__c</fullName>
        <formula>Discovery_Funding__c - Triage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Discovery Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_EA_Review__c</fullName>
        <formula>EA_Review__c - PRF_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to EA Review</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_PRF_Received__c</fullName>
        <formula>PRF_Received__c - PRF_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to PRF Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Triage__c</fullName>
        <formula>Triage__c - Concept_Elaboration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Triage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discovery_Funding__c</fullName>
        <label>Discovery Funding</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Review__c</fullName>
        <inlineHelpText>Date EA last reviewed.</inlineHelpText>
        <label>EA Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Which EA Analyst will work on this project?</description>
        <label>EA Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ent_Program__c</fullName>
        <label>Ent Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EDV</fullName>
                </value>
                <value>
                    <fullName>EHR</fullName>
                </value>
                <value>
                    <fullName>EHR-Meaningful Use</fullName>
                </value>
                <value>
                    <fullName>EHR-My Health Online</fullName>
                </value>
                <value>
                    <fullName>EHR - OpTime</fullName>
                </value>
                <value>
                    <fullName>HIE</fullName>
                </value>
                <value>
                    <fullName>ICD 10</fullName>
                </value>
                <value>
                    <fullName>ICD 10 - Systemwide IS</fullName>
                </value>
                <value>
                    <fullName>ICD 10 - Systemwide Operational</fullName>
                </value>
                <value>
                    <fullName>IS Tech Infrastructure - IS Technical Infrastructure</fullName>
                </value>
                <value>
                    <fullName>IS Tech Infrastructure - Data Center - Date Center</fullName>
                </value>
                <value>
                    <fullName>IS Tech Infrastructure - Infrastructure Apps - Infrastructure Applications</fullName>
                </value>
                <value>
                    <fullName>IS Tech Infrastructure - Life Cycle Mgmt - Life Cycle Management</fullName>
                </value>
                <value>
                    <fullName>IS Tech Infrastructure - Servers and Storage - Servers and Storage</fullName>
                </value>
                <value>
                    <fullName>IS Tech Infrastructure - Service Mgmt - Service Management</fullName>
                </value>
                <value>
                    <fullName>IS Tech Infrastructure - Transport Infrastructure - Transport Infrastructure</fullName>
                </value>
                <value>
                    <fullName>IS Tech Infrastructure - UCCE</fullName>
                </value>
                <value>
                    <fullName>IS Tech Infrastructure - User Access Experience - User Access Experience</fullName>
                </value>
                <value>
                    <fullName>IS Tech Infrastructure - User Experience - User Experience</fullName>
                </value>
                <value>
                    <fullName>ITSM</fullName>
                </value>
                <value>
                    <fullName>ITSM - Asset Mgmt</fullName>
                </value>
                <value>
                    <fullName>ITSM - Capacity Mgmt</fullName>
                </value>
                <value>
                    <fullName>ITSM - Config Mgmt</fullName>
                </value>
                <value>
                    <fullName>ITSM - Svc Catalog</fullName>
                </value>
                <value>
                    <fullName>ITSM - Svc Desk</fullName>
                </value>
                <value>
                    <fullName>MDM</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Security - Cyber Security</fullName>
                </value>
                <value>
                    <fullName>Security - Cyber Security - DLP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Performance__c</fullName>
        <label>Finance Performance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Rating</fullName>
                </value>
                <value>
                    <fullName>None: 0% ROI breaks even</fullName>
                </value>
                <value>
                    <fullName>Low: ROI less than or equal to 5%</fullName>
                </value>
                <value>
                    <fullName>Moderate: ROI less than or equal to 10%</fullName>
                </value>
                <value>
                    <fullName>Strong: ROI less than or equal to 15%</fullName>
                </value>
                <value>
                    <fullName>Extreme: ROI less than or equal to 25%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Performance__c</fullName>
        <label>Financial Performance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Rating</fullName>
                </value>
                <value>
                    <fullName>None: Meets 1 of 5 Goal Areas</fullName>
                </value>
                <value>
                    <fullName>Low: Meets 2 of 5 Goal Areas</fullName>
                </value>
                <value>
                    <fullName>Moderate: Meets 3 of 5 Goal Areas</fullName>
                </value>
                <value>
                    <fullName>Strong: Meets 4 of 5 Goal Areas</fullName>
                </value>
                <value>
                    <fullName>Extreme: Meets 5 of 5 Goal Areas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Governance_Body__c</fullName>
        <label>Governance Body</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>IS Leadership</fullName>
                </value>
                <value>
                    <fullName>Business Systems</fullName>
                </value>
                <value>
                    <fullName>Revenue Cycle</fullName>
                </value>
                <value>
                    <fullName>Web Portal</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Project_Notification__c</fullName>
        <label>Initial Project Notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owning_Business_Unit__c</fullName>
        <label>Owning Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SH.SHSS.SBD.SHP</fullName>
                </value>
                <value>
                    <fullName>SH.Affiliate.ZNR.Kahi Mohala</fullName>
                </value>
                <value>
                    <fullName>SH.Affiliate.ZNR.SCAH</fullName>
                </value>
                <value>
                    <fullName>SH.S3</fullName>
                </value>
                <value>
                    <fullName>SH.S3.BioMed</fullName>
                </value>
                <value>
                    <fullName>SH.S3.Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRF_Received__c</fullName>
        <inlineHelpText>Date the Project Request Form was received.</inlineHelpText>
        <label>PRF Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>People__c</fullName>
        <label>People</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Rating</fullName>
                </value>
                <value>
                    <fullName>None: Does not impact employee satisfaction index</fullName>
                </value>
                <value>
                    <fullName>Low: Low impact on employee satisfaction index</fullName>
                </value>
                <value>
                    <fullName>Moderate: Evidence nationally of positive impact on employee satisfaction index</fullName>
                </value>
                <value>
                    <fullName>Strong: Evidence at Sutter of positive impact on employee satisfaction index</fullName>
                </value>
                <value>
                    <fullName>Extreme: Industry best practice showing impact on employee satisfaction index</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Coordinator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Project Coordinator)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <inlineHelpText>SHIS Project Server Project Number</inlineHelpText>
        <label>Project Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Stage__c</fullName>
        <label>Project Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Idea</fullName>
                </value>
                <value>
                    <fullName>Exploration</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Build</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Go Live</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Regionally Approved</fullName>
                </value>
                <value>
                    <fullName>System Approved</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>Quality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Rating</fullName>
                </value>
                <value>
                    <fullName>None: Little Direct impact on patient outcome, safety, or comfort</fullName>
                </value>
                <value>
                    <fullName>Low: Impact on comfort / satisfaction, but no direct clinical / Safety impact</fullName>
                </value>
                <value>
                    <fullName>Moderate: Evidence nationally of possible positive clinical, safety, or service impact</fullName>
                </value>
                <value>
                    <fullName>Strong: Evidence at Sutter of likely positive clinical, safety, or service impact</fullName>
                </value>
                <value>
                    <fullName>Extreme: Industry best practice for high priority area, broad clinical, safety, or service impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <inlineHelpText>From SBAR Analysis, what is the Project Recommendation?</inlineHelpText>
        <label>Recommendation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Regional_CIO_Service_Line_VP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional CIO / Service Line VP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Regional CIO / Service Line VP)</relationshipLabel>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Completion_Date__c</fullName>
        <label>Requested Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requestor_Department__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CVR</fullName>
                </value>
                <value>
                    <fullName>EBR</fullName>
                </value>
                <value>
                    <fullName>PCR</fullName>
                </value>
                <value>
                    <fullName>SHSO</fullName>
                </value>
                <value>
                    <fullName>SSR</fullName>
                </value>
                <value>
                    <fullName>System-Wide</fullName>
                </value>
                <value>
                    <fullName>WBR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who requested this project?</inlineHelpText>
        <label>Requestor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requestor</relationshipLabel>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Status__c</fullName>
        <label>Schedule Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Track</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope_Status__c</fullName>
        <label>Scope Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Track</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Rating</fullName>
                </value>
                <value>
                    <fullName>None: Clinical capacity / network opportunity not yet identified</fullName>
                </value>
                <value>
                    <fullName>Low: Potential for integration within region or across system but no plan in place</fullName>
                </value>
                <value>
                    <fullName>Moderate: Integration likely within region or across system and plan in place to achieve</fullName>
                </value>
                <value>
                    <fullName>Strong: Evidence at Sutter of integration success within region or across system, likelihood of achieving</fullName>
                </value>
                <value>
                    <fullName>Extreme: Industry best practice for integration within region or across system</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Situation__c</fullName>
        <inlineHelpText>From SBAR Analysis, what is the Situation?</inlineHelpText>
        <label>Situation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sponsored Projects</relationshipLabel>
        <relationshipName>SponsoredProjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Rating_Image__c</fullName>
        <formula>IMAGE 
( 
 IF( AND (ISPICKVAL( Budget_Status__c ,&apos;On Track&apos;),ISPICKVAL( Scope_Status__c ,&apos;On Track&apos;),ISPICKVAL( Schedule_Status__c ,&apos;On Track&apos;)),
			&apos;servlet/servlet.FileDownload?file=015Z000000079ob&apos;, 
				IF( OR(ISPICKVAL(Budget_Status__c,&quot;On Hold&quot;),ISPICKVAL(Scope_Status__c,&quot;On Hold&quot;),ISPICKVAL(Schedule_Status__c,&quot;On Hold&quot;)),
					&apos;servlet/servlet.FileDownload?file=015Z000000079oW&apos;, 
						IF( OR(ISPICKVAL(Budget_Status__c,&quot;At Risk&quot;),ISPICKVAL(Scope_Status__c,&quot;At Risk&quot;),ISPICKVAL(Schedule_Status__c,&quot;At Risk&quot;)),&apos;servlet/servlet.FileDownload?file=015Z000000079oR&apos;,&apos;servlet/servlet.FileDownload?file=015Z000000079oR&apos; 
						) 
		)),
&apos;&apos;, 30, 30 
)</formula>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Rating__c</fullName>
        <label>Status Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Triage__c</fullName>
        <inlineHelpText>Date sent to Triage</inlineHelpText>
        <label>Triage</label>
        <type>Date</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Project_Number__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Description__c</columns>
        <columns>EA_Team_Member__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Stage__c</columns>
        <columns>Owning_Business_Unit__c</columns>
        <columns>Status_Rating_Image__c</columns>
        <columns>Aging__c</columns>
        <columns>Date_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CVR_Projects</fullName>
        <columns>NAME</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Description__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Status_Rating_Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requestor_Department__c</field>
            <operation>equals</operation>
            <value>CVR</value>
        </filters>
        <label>CVR Projects</label>
    </listViews>
    <listViews>
        <fullName>EBR_Projects</fullName>
        <columns>NAME</columns>
        <columns>Aging__c</columns>
        <columns>Description__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Status_Rating_Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requestor_Department__c</field>
            <operation>equals</operation>
            <value>EBR</value>
        </filters>
        <label>EBR Projects</label>
    </listViews>
    <listViews>
        <fullName>Jason_Elrod_s_Projects</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Project_Number__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Project_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EA_Team_Member__c</field>
            <operation>equals</operation>
            <value>Jason Elrod</value>
        </filters>
        <label>Jason Elrod&apos;s Projects</label>
    </listViews>
    <listViews>
        <fullName>PCR_Projects</fullName>
        <columns>NAME</columns>
        <columns>Aging__c</columns>
        <columns>Description__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Status_Rating_Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requestor_Department__c</field>
            <operation>equals</operation>
            <value>PCR</value>
        </filters>
        <label>PCR Projects</label>
    </listViews>
    <listViews>
        <fullName>Summary_ALL</fullName>
        <columns>NAME</columns>
        <columns>Requestor__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Description__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Status_Rating_Image__c</columns>
        <filterScope>Everything</filterScope>
        <label>Summary - ALL</label>
    </listViews>
    <listViews>
        <fullName>WBR_Projects</fullName>
        <columns>NAME</columns>
        <columns>Aging__c</columns>
        <columns>Description__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Project_Status__c</columns>
        <columns>Status_Rating_Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requestor_Department__c</field>
            <operation>equals</operation>
            <value>WBR</value>
        </filters>
        <label>WBR Projects</label>
    </listViews>
    <nameField>
        <displayFormat>P-{000000000}</displayFormat>
        <label>Project AN</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>New_Project</fullName>
        <active>true</active>
        <label>New VMO Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>SSR_Project</fullName>
        <active>true</active>
        <label>SSR Project</label>
    </recordTypes>
    <recordTypes>
        <fullName>VMO_Project</fullName>
        <active>true</active>
        <label>VMO Project</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>